# briolette

./: .dockerignore  .gitignore  AUDIT.md  Cargo.toml  Dockerfile  TODO.txt  docker-compose.yml
contracts/: foundry.toml
contracts/src/: BrioletteBridge.sol  EcdaaVerifier.sol
contracts/test/: BrioletteBridge.t.sol
data/registrar/: nac_issuer.gpk  nac_issuer.sk  ttc_issuer.gpk  ttc_issuer.sk
docker/: entrypoint.sh
docs/: getting-started.md
docs/design/: bitcoin_l2.md  concepts.md  decentralization.md  ecdaa_analysis.md  fuse_modules.md  fuse_slider_v3.md  nac_attestation.md  policy_guidance.md  recovery.md  security_model.md  theory_of_operation.md
docs/design/architecture/credentials/: credentials.md
formal/: .gitignore  BrioletteSystem.cfg  BrioletteSystem.tla  ForkDetection.cfg  ForkDetection.tla  GossipConvergence.cfg  GossipConvergence.tla  P2PTransaction.cfg  P2PTransaction.tla  README.md  RecoveryProtocol.tla  RevocationProtocol.cfg  RevocationProtocol.tla  TokenLifecycle.cfg  TokenLifecycle.tla
hardware/: JLCPCB-ORDERING-GUIDE.md  README.md  export_jlcpcb.py  test_a_footprint.kicad_pcb  test_b_segment.kicad_pcb  test_c_zone.kicad_pcb  test_d_combined.kicad_pcb  test_e_arcs.kicad_pcb  test_f_keepout.kicad_pcb  test_g_graphics.kicad_pcb  test_h1_single_nopad.kicad_pcb  test_h2_nopad_reallib.kicad_pcb  test_h3_nopad_noprops.kicad_pcb  test_h_nopad_footprints.kicad_pcb  test_i_minimal_setup.kicad_pcb  test_minimal.kicad_pcb  test_relay_content.kicad_pcb  test_relay_headers.kicad_pcb
hardware/relay/: BOM.md  README.md
hardware/relay/3d/: relay-case.scad
hardware/relay/drivers/: Cargo.toml
hardware/relay/drivers/src/: keypad.rs  lib.rs  protocol.rs  relay_config.rs
hardware/relay/firmware/: Cargo.toml
hardware/relay/firmware/src/: config.rs  led.rs  lib.rs  main.rs  pn7150.rs  power.rs  transaction.rs
hardware/relay/kicad/: fp-lib-table  relay-lib.kicad_sym  relay.kicad_pcb  relay.kicad_pro  relay.kicad_sch  sym-lib-table
hardware/relay/kicad/relay-lib.pretty/: HVQFN-40-5x5mm.kicad_mod  QFN-20-3.5x3.5mm.kicad_mod  WQFN-24-4x4mm.kicad_mod
hardware/stick/: README.md
hardware/stick/docs/: button-pin-auth.md  credstick-to-credstick.md  deferred-payment.md  design-overview.md  opentitan-migration.md  pos-relay-app.md  power-analysis.md
hardware/stick/firmware/: Cargo.toml  README.md  memory.x
hardware/stick/firmware/.cargo/: config.toml
hardware/stick/firmware/src/: apdu.rs  atecc608b.rs  bloom.rs  button.rs  display.rs  ecdaa.rs  main.rs  nfc.rs  sim_card.rs  storage.rs
hardware/stick/rev0-devkit/: BOM.md  README.md
hardware/stick/rev1-pcb/: BOM.md  README.md
hardware/stick/rev1-pcb/3d/: README.md  credstick-case.scad
hardware/stick/rev1-pcb/kicad/: fp-lib-table  mcu.kicad_sch  peripherals.kicad_sch  power.kicad_sch  stick-lib.kicad_sym  stick.kicad_pcb  stick.kicad_pro  stick.kicad_sch  sym-lib-table
hardware/stick/rev1-pcb/kicad/stick-lib.pretty/: FPC_24pin_0.5mm.kicad_mod  NanoSIM_Molex_78800.kicad_mod  Piezo_Cantilever_25x5mm.kicad_mod  QFN-48-6x6mm.kicad_mod  SW_SPST_3x3mm.kicad_mod  (+3 more)
mobile/: .gitignore  BUILD.md  build-rust.sh  gradlew  settings.gradle.kts
mobile/androidApp/: build.gradle.kts  proguard-rules.pro
mobile/androidApp/src/main/: AndroidManifest.xml
mobile/gradle/: libs.versions.toml
mobile/iosApp/BrioletteWallet.xcodeproj/: project.pbxproj
mobile/iosApp/iosApp/: AppAttestHelper.swift  BrioletteApp.swift  ContentView.swift  Info.plist  WalletBridge.swift
mobile/pos/androidApp/: build.gradle.kts
mobile/pos/shared/: build.gradle.kts
mobile/shared/: build.gradle.kts
scripts/: quickstart.sh
src/: utils.sh
src/a2a/: Cargo.toml
src/a2a/src/: lib.rs  routes.rs  server_main.rs  task_manager.rs  types.rs
src/bridge/: Cargo.toml
src/bridge/src/: alloy_client.rs  bitcoin.rs  bitcoin_deposit_processor.rs  deposit_processor.rs  ethereum.rs  key_registry.rs  l1.rs  lib.rs  server.rs  server_main.rs
src/card-personalize/: Cargo.toml
src/card-personalize/src/: main.rs
src/clerk/src/: client.rs  epoch_generate.rs  server.rs  server_main.rs  tonic_support.rs
src/crypto/: Cargo.toml  build.rs
src/crypto/src/: lib.rs  v0.rs  v1.rs
src/gateway/: Cargo.toml
src/gateway/src/: main.rs
src/http_common/: Cargo.toml
src/http_common/src/: auth.rs  lib.rs  serde_proto.rs
src/integration/: Cargo.toml
src/integration/src/: lib.rs
src/javacard/: README.md  build.gradle
src/javacard/applet/: BLS12381Params.java  BN254Params.java  BloomFilter.java  BrioletteApplet.java
src/javacard/applet-hw/: ECMath.java
src/javacard/applet-sim/: ECMath.java
src/mint/src/: client.rs  server.rs  server_main.rs
src/mobile-ffi/: Cargo.toml  build.rs
src/mobile-ffi/src/: briolette.udl  lib.rs
src/proto/: Cargo.toml  build.rs
src/proto/proto/: amount_type.proto  bridge.proto  clerk.proto  common.proto  recovery.proto  registrar.proto  service_auth.proto  swapper.proto  token.proto  tokenmap.proto
src/proto/src/: lib.rs  rate_limit.rs
src/proto/src/briolette/: mod.rs  token.rs
src/receiver/src/: client.rs  server.rs  server_main.rs
src/recovery/: Cargo.toml
src/recovery/src/: server.rs  server_main.rs  tonic_support.rs
src/registrar/: Cargo.toml
src/registrar/src/: attestation.rs  client.rs  lib.rs  server.rs  server_main.rs
src/service_auth/: Cargo.toml
src/service_auth/src/: lib.rs
src/simulation/absim/examples/: basic.rs
src/simulation/absim/src/: clients.rs  lib.rs
src/simulation/briolettesim/src/: main.rs
src/simulation/levy_distr/src/: lib.rs
src/simulation/rand_flight/examples/: viz.rs
src/simulation/rand_flight/src/: lib.rs
src/swapper/: Cargo.toml
src/swapper/src/: server.rs  tonic_support.rs
src/tokenmap/: Cargo.toml
src/tokenmap/src/: client.rs  server.rs  server_main.rs  tonic_support.rs
src/validate/: Cargo.toml
src/validate/src/: client.rs  server.rs  server_main.rs
src/wallet/: Cargo.toml
src/wallet/src/: cli.rs  lib.rs
src/x402/: Cargo.toml
src/x402/src/: client.rs  facilitator.rs  lib.rs  middleware.rs  scheme.rs  types.rs
(+43 files in other folders)
