[package]
name = "briolette-a2a"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "briolette-a2a-server"
path = "src/server_main.rs"

[dependencies]
briolette-proto = { path = "../proto", version = "*" }
briolette-receiver = { path = "../receiver", version = "*" }
briolette-wallet = { path = "../wallet", version = "*" }
briolette-http-common = { path = "../http_common", version = "*" }
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
prost = "0.11"
