[package]
name = "briolette-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
# For local storage serialization.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"

# Native Rust pairing-based crypto (BN254 curve)
substrate-bn = "0.6"
rand = "0.8"
sha2 = "0.10"
