[package]
name = "briolette-crypto"
version = "0.1.0"
edition = "2021"

[features]
default = []
nfc = ["pcsc"]

[dependencies]
# For local storage serialization.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"

# For custom errors
thiserror = "1.0.56"

# Native Rust pairing-based crypto (BN254 curve)
substrate-bn = "0.6"
# BLS12-381 pairing curve (128-bit security) for v1
bls12_381_plus = "0.8"
ff = "0.13"
rand = "0.8"
sha2 = "0.10"

# PC/SC smart card interface for NFC communication (optional)
pcsc = { version = "2", optional = true }
