[package]
name = "briolette-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "briolette-gateway"
path = "src/main.rs"

[dependencies]
briolette-proto = { path = "../proto", version = "*" }
briolette-receiver = { path = "../receiver", version = "*" }
briolette-wallet = { path = "../wallet", version = "*" }
briolette-http-common = { path = "../http_common", version = "*" }
briolette-a2a = { path = "../a2a", version = "*" }
briolette-x402 = { path = "../x402", version = "*" }
tonic = "0.8"
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
log = "0.4"
stderrlog = "0.5.4"
clap = { version = "4.3.2", features = ["derive"] }
