[package]
name = "briolette-integration"
version = "0.1.0"
edition = "2021"
description = "High-level integration library for embedding Briolette wallet functionality into applications (POS, messaging, etc.)"

[dependencies]
briolette-wallet = { path = "../wallet", version = "*" }
briolette-crypto = { path = "../crypto", version = "*" }
briolette-proto = { path = "../proto", version = "*" }
thiserror = "1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
base64 = "0.21"
sha256 = "1.1.2"

[dev-dependencies]
tokio-test = "*"
