[package]
name = "briolette-x402"
version = "0.1.0"
edition = "2021"

[dependencies]
briolette-proto = { path = "../proto", version = "*" }
briolette-receiver = { path = "../receiver", version = "*" }
briolette-wallet = { path = "../wallet", version = "*" }
briolette-http-common = { path = "../http_common", version = "*" }
axum = "0.6"
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4"
prost = "0.11"
reqwest = { version = "0.11", features = ["json"] }
http = "0.2"
futures-util = "0.3"
