[package]
name = "briolette-relay-firmware"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Briolette solar relay firmware — NFC reader for credstick-to-credstick payments"

[[bin]]
name = "relay"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
# Embassy async runtime for nRF52840
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.4", features = ["tick-hz-32_768"] }
embassy-nrf = { version = "0.3", features = ["nrf52840", "time-driver-rtc1", "unstable-pac"] }
embassy-sync = "0.6"
embassy-futures = "0.1"

# Cortex-M support
cortex-m = { version = "0.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7"

# No-std collections
heapless = "0.8"

# Embedded HAL traits
embedded-hal = "1.0"

# Logging
defmt = "0.3"
defmt-rtt = "0.4"

# Panic handler
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Static assertions
static_cell = "2"

[dev-dependencies]
embedded-hal-mock = "0.11"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
