[package]
name = "briolette-credstick"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Embassy async runtime for nRF52840
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.4", features = ["tick-hz-32_768"] }
embassy-nrf = { version = "0.3", features = ["nrf52840", "time-driver-rtc1", "unstable-pac"] }
embassy-sync = "0.6"
embassy-futures = "0.1"

# Cortex-M support
cortex-m = { version = "0.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7"

# No-std crypto
# BLS12-381 — same curve as the host-side briolette-crypto v1
bls12_381_plus = { version = "0.8", default-features = false }
ff = { version = "0.13", default-features = false }
sha2 = { version = "0.10", default-features = false }

# Serialization (no-std protobuf would be heavy; use manual serialization)
heapless = "0.8"

# Logging
defmt = "0.3"
defmt-rtt = "0.4"

# Panic handler
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Static assertions
static_cell = "2"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"  # Optimize for size
overflow-checks = false
